<resources>
    <string name="app_name" translatable="false">WorldRadio</string>

    <!-- Settings menu -->
    <string name="auto_shut_down">Auto shut down</string>
    <string name="auto_shut_down_disable">Disable</string>
    <string name="auto_shut_down_10">After 10 minutes</string>
    <string name="auto_shut_down_30">After 30 minutes</string>
    <string name="auto_shut_down_60">After 60 minutes</string>
    <string name="auto_shut_down_custom">Custom</string>
    <string name="about">About</string>

    <!-- Playlist and video options -->
    <string name="insert_above">Insert above</string>
    <string name="insert_below">Insert below</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!-- Playlist alert dialog -->
    <string name="add_playlist">Add playlist</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="title">Title</string>
    <string name="default_title">My playlist</string>
    <string name="icon">Icon</string>

    <!-- Radio station alert dialog -->
    <string name="add_video">Add radio station</string>
    <string name="url_id_search">Search…</string>
    <string name="search_by_name">Name:</string>
    <string name="search_by_country">Country:</string>
    <string name="search_by_language">Language:</string>
    <string name="search_by_tag">Tag:</string>
    <string name="search_by_state">State:</string>

    <!-- Delete alert dialog -->
    <string name="delete_video_alert">Are you sure you want to delete this station?</string>
    <string name="delete_playlist_alert">Are you sure you want to delete this playlist?</string>

    <!-- Info alert dialog -->
    <string name="copy_stream_url">Copy stream URL</string>
    <string name="copy_favicon_url">Copy favicon URL</string>
    <string name="copy_station_uuid">Copy station UUID</string>

    <!-- Dialog buttons-->
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_apply">Apply</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_ok">OK</string>

    <!-- Toast messages -->
    <string name="copy_to_clipboard">Copied to clipboard</string>
    <string name="station_already_added">Station already added</string>
    <string name="grant_permission">Playlists can not be imported without storage permission.</string>

    <!-- No playlists/videos -->
    <string name="no_playlists">There are no playlists.\n\nTap the \"+\" button\nto add a playlist.</string>
    <string name="no_videos">The playlist is empty.\n\nTap the \"+\" button\nto add a station.</string>

    <!-- Misc -->
    <string name="select_all">Select all</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="merge">Merge</string>
    <string name="sort_playlists">Sort playlists</string>
    <string name="sort_videos">Sort radio stations</string>
    <string name="multi_choose">%d list(s) selected</string>
    <string name="multi_choose_station">%d station(s) selected</string>
    <string name="multi_remove_title">Remove multiple lists</string>
    <string name="multi_remove_station_title">Remove multiple stations</string>
    <string name="multi_remove_prompt">Remove %d lists?</string>
    <string name="multi_remove_station_prompt">Remove %d stations?</string>
    <string name="removed">Remove</string>
    <string name="merge_title">Merge</string>
    <string name="merge_message">Merge %d playlists?</string>
    <string name="dialog_button_merge">Merge</string>
    <string name="merge_success">Merged in playlist \"%s\".</string>
    <string name="choose_more_than_one">Please choose at least two playlists.</string>
    <string name="auto_shut_down_title">Auto shut down</string>
    <string name="after_minutes">After %d minutes</string>
    <string name="dialog_button_start">Start</string>
    <string name="moved">Moved.</string>
    <string name="copied">Copied.</string>
    <string name="no_playlist_found">All playlists contain this station.</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="forward">Forward</string>
    <string name="stop">Stop</string>
    <string name="already_added">This station has already been added.</string>
    <string name="timer_disabled">Timer disabled.</string>
    <string name="timer_set">Player will be shut down in %d minutes.</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="loading">Loading…</string>
    <string name="no_results_found">No results found.</string>
    <string name="station_info">Station info</string>
    <string name="import_success">Playlist imported.</string>
    <string name="import_fail">Playlist import failed.</string>
    <string name="n_stations">%d stations</string>
    <string name="start_timer">Start timer</string>
    <string name="cancel_timer">Cancel timer</string>
    <string name="settings">Settings</string>
    <string name="minutes">minutes</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto">Automatic</string>
    <string name="check_internet_connection">Please check your Internet connection.</string>
    <string name="at_least_three_letters">You can search for a word with at least three letters.</string>
    <string name="my_playlists">MY PLAYLISTS</string>
    <string name="top_stations">TOP STATIONS</string>
    <string name="countries">COUNTRIES</string>
    <string name="languages">LANGUAGES</string>
    <string name="tags">TAGS</string>
    <string name="world_top_20">World Top20</string>
    <string name="most_liked">Most liked stations</string>
    <string name="last_added">Last added stations</string>
    <string name="currently_listening">Currently listened stations</string>
    <string name="new_playlist">New playlist</string>
    <string name="could_not_add">Could not add.</string>
    <string name="add_to_home">Add to home screen</string>
    <string name="go_to_website">Go to website</string>
    <string name="added">Has been added.</string>
    <string name="playlist_not_selected">No playlist selected.</string>
    <string name="minutes_left">minutes left</string>
    <string name="search_hint">Search…</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_bitrate">Bitrate</string>
    <string name="sort_by_codec">Codec</string>

</resources>