<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/addToTop"
            android:title="@string/insert_above" />
        <item
            android:id="@+id/addToBottom"
            android:title="@string/insert_below" />
    </group>
    <group >
        <item
            android:id="@+id/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/sort_videos" />
        <item
            android:id="@+id/sortBy"
            android:title="Sırala">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/name"
                        android:title="Ada göre" />
                    <item
                        android:id="@+id/bitrate"
                        android:title="Bit hızına göre" />
                    <item
                        android:id="@+id/codec"
                        android:title="Codec'e göre" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/edit"
            android:title="@string/edit" />
        <item
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/share" />
        <item
            android:id="@+id/addToHome"
            android:title="@string/add_to_home" />
        <item
            android:id="@+id/delete"
            android:title="@string/delete" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
    </group>
</menu>