<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/addToTop"
            android:title="@string/insert_above"></item>
        <item
            android:id="@+id/addToBottom"
            android:title="@string/insert_below" />
    </group>
    <group>
        <item
            android:id="@+id/addToPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="Oynatma listesine ekle" />
        <item
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="Kanal bilgileri" />
        <item
            android:id="@+id/delete"
            android:title="@string/delete" />
    </group>
</menu>