<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_on_dark_grey"
            android:padding="16dp"
            app:srcCompat="@drawable/baseline_close_24" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/add_to_playlist"
            android:textColor="@color/grey4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/moveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_list"
            android:padding="16dp"
            android:text="@string/move"
            android:textAllCaps="true"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_list"
            android:padding="16dp"
            android:text="@string/copy"
            android:textAllCaps="true"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newPlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ripple_list"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp">

        <ImageView
            android:id="@+id/playlistIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/playlist_icon"
            android:padding="16dp"
            app:srcCompat="@drawable/baseline_playlist_add_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlistTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_playlist"
                android:textColor="@color/grey1"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical" />

</LinearLayout>