<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/search_modes"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/url_id_search"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/blue_grey"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/very_dark_grey"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResults"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/back"
            android:visibility="gone">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/noResults"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center"
            android:text="Sonuç bulunamadı."
            android:visibility="gone" />

        <TextView
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center"
            android:text="Yükleniyor..."
            android:visibility="gone" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:text="@string/dialog_button_add"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dialog_button_cancel"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>