<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/title"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:ems="10"
            android:hint="@string/default_title"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_grey" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/icon"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/iconSelector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/icon_selector"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_featured_play_list_24" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/icon_selector"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_favorite_24" />

            <ImageView
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/icon_selector"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_library_music_24" />

            <ImageView
                android:id="@+id/game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/icon_selector"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_newspaper_24" />

            <ImageView
                android:id="@+id/movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/icon_selector"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_theater_comedy_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>