<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/musicController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/controller_back"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/very_dark_grey"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/musicIcon"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_library_music_24" />

                <TextView
                    android:id="@+id/musicTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="TextView" />

                <ImageView
                    android:id="@+id/infoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_on_black"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_info_outline_24" />

                <ImageView
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_on_black"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_play_arrow_24" />

                <ImageView
                    android:id="@+id/addToButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_on_black"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_playlist_add_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/very_dark_grey"
                android:orientation="horizontal"></LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_grey"
                android:gravity="center_vertical"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_on_dark_grey"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_radio_24" />

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_on_dark_grey"
                    android:clickable="true"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_settings_24"
                    tools:srcCompat="@drawable/baseline_settings_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/recyclerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listOfPlaylistsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="84dp">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/playlistRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="84dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/noPlaylists"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_playlists"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/noVideos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_videos"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        app:srcCompat="@drawable/baseline_add_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>